[package]
name = "litten"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3.26"
# Argument parsing
clap =  { version = "4.1.4",  features = ["derive"] }
# Error handling
anyhow = "1.0.69"
thiserror = "1.0"
# Configuration parsing
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
serde_with = "2.2.0"
regex = "1.7.1"
# Logging
log = "0.4.17"
env_logger = "0.10.0"
# HTTP
urlencoding = "2.1.2"
strum = { version = "0.24.1", features = ["derive"] }